# oysterpack-rust

./: .gitignore  API_GUIDELINES.md  CHANGELOG.md  CODE_REVIEWS.md  Cargo.toml  DEV.md  NOTES.md  PLATFORM.md  README.md  TODO.md  Vagrantfile  WORKSPACE.md  bootstrap.sh
oysterpack/: CHANGELOG.md  Cargo.toml  README.md
oysterpack-actors/: Cargo.toml  oysterpack-actors.draw.xml
oysterpack-actors/src/: lib.rs  message.rs  tests.rs
oysterpack-actors/src/actor/: mod.rs  service.rs  tests.rs
oysterpack-actors/src/logging/: mod.rs  tests.rs
oysterpack-actors/src/registry/: actors.rs  arbiters.rs  errors.rs  mod.rs  tests.rs
oysterpack-app-metadata/: CHANGELOG.md  Cargo.toml  README.md  build.rs
oysterpack-app-metadata-macros/: CHANGELOG.md  Cargo.toml  README.md
oysterpack-app-metadata-macros/src/: lib.rs  macros.rs  tests.rs
oysterpack-app-metadata-macros/src/macros/: build_multi_authors.rs  mod.rs  tests.rs
oysterpack-app-metadata/src/: lib.rs  macros.rs  metadata.rs  tests.rs
oysterpack-app-metadata/src/macros/: build_no_ci_platform.rs  build_on_ci_platform.rs  mod.rs  tests.rs
oysterpack-app-metadata/src/metadata/: dependency.rs  mod.rs  tests.rs
oysterpack-app-template/: Cargo.toml
oysterpack-app-template/src/: main.rs  tests.rs
oysterpack-app-template/tests/: version-numbers.rs
oysterpack-built/: CHANGELOG.md  Cargo.toml  README.md  build.rs
oysterpack-built-mod/: CHANGELOG.md  Cargo.toml  README.md  build.rs
oysterpack-built-mod/src/: lib.rs  tests.rs
oysterpack-built/src/: build.rs  build_time.rs  lib.rs  macros.rs  tests.rs
oysterpack-built/src/build_time/: mod.rs  tests.rs
oysterpack-built/src/metadata/: dependency.rs  deps.rs  mod.rs  tests.rs
oysterpack-built/tests/: version-numbers.rs
oysterpack-core/: Cargo.toml  build.rs  oysterpack-core.draw.xml
oysterpack-core/benches/: async_logger.rs  message_encoding.rs  sync_logger.rs
oysterpack-core/src/: actor.rs  lib.rs  macros.rs  message.rs  message_old.rs  tests.rs
oysterpack-core/src/actor/: alarms.rs  app.rs  arbiters.rs  config.rs  errors.rs  eventlog.rs  events.rs  logger.rs  mod.rs
oysterpack-core/src/devops/: mod.rs  tests.rs
oysterpack-core/src/errors/: macros.rs  mod.rs  tests.rs
oysterpack-core/src/event/: mod.rs
oysterpack-core/src/macros/: mod.rs
oysterpack-core/src/message/: base58.rs  codec.rs  errors.rs  mod.rs  service.rs
oysterpack-core/src/monix/: mod.rs
oysterpack-core/src/newtype/: mod.rs
oysterpack-core/src/reactive/: command.rs  mod.rs  tests.rs
oysterpack-core/src/uid/: macros.rs  mod.rs
oysterpack-core/src/utils/: mod.rs
oysterpack-core/tests/: devops.rs  errors.rs  event.rs  logger.rs  uid.rs  version-numbers.rs
oysterpack-errors/: CHANGELOG.md  Cargo.toml
oysterpack-errors/examples/: errors.rs
oysterpack-errors/src/: error.rs  lib.rs
oysterpack-errors/src/error/: mod.rs
oysterpack-events/: Cargo.toml
oysterpack-events/src/: event.rs  lib.rs  macros.rs
oysterpack-events/tests/: event.rs
oysterpack-id/: Cargo.toml
oysterpack-id/src/: lib.rs  main.rs
oysterpack-lib-template/: Cargo.toml  README.md  build.rs
oysterpack-lib-template/src/: build.rs  lib.rs  tests.rs
oysterpack-log/: CHANGELOG.md  Cargo.toml  README.md  build.rs
oysterpack-log/src/: config.rs  lib.rs  manager.rs
oysterpack-logging/: Cargo.toml
oysterpack-logging/etc/: elk.conf  rsyslog.conf
oysterpack-logging/src/: lib.rs  tests.rs
oysterpack-macros/: CHANGELOG.md  Cargo.toml  README.md
oysterpack-macros/src/: lib.rs  newtype.rs  tests.rs
oysterpack-macros/tests/: version-numbers.rs
oysterpack-message/: Cargo.toml
oysterpack-message/benches/: address_bench.rs  encrypt_bench.rs  rpc_bench.rs
oysterpack-message/src/: envelope.rs  errors.rs  lib.rs  marshal.rs  message.rs  op_nng.rs  op_thread.rs  protocol.rs  security.rs
oysterpack-platform/: Cargo.toml  README.md
oysterpack-platform/src/: lib.rs  plaform.puml  tests.rs
oysterpack-rpc/: Cargo.toml  build.rs
oysterpack-rpc/src/: lib.rs
oysterpack-rpc/tests/: version-numbers.rs
oysterpack-sandbox/: Cargo.toml
oysterpack-sandbox/src/: juniper_poc.rs  lib.rs  tests.rs
oysterpack-service/: Cargo.toml
oysterpack-service/src/: lib.rs
oysterpack-testing/: CHANGELOG.md  Cargo.toml  README.md
oysterpack-testing/src/: lib.rs  macros.rs
oysterpack-trust/: Cargo.toml
oysterpack-trust-grpc/: Cargo.toml  README.md  build.rs
oysterpack-trust-grpc/benches/: grpc_bench.rs
oysterpack-trust-grpc/protos/: message.proto  metrics.proto
oysterpack-trust-grpc/src/: lib.rs  protos.rs  tests.rs
oysterpack-trust-grpc/tests/: protos_foo.rs
oysterpack-trust-nng/: Cargo.toml  README.md
oysterpack-trust-nng/benches/: nng_reqrep_bench.rs
oysterpack-trust-nng/src/: config.rs  lib.rs  reqrep.rs
oysterpack-trust-nng/tests/: cucumber_reqrep_client.rs  cucumber_reqrep_client_registry.rs  version-numbers.rs
oysterpack-trust/benches/: executor_bench.rs  metrics_bench.rs  nng_reqrep_bench.rs  reqrep_bench.rs
oysterpack-trust/docs/: oysterpack_trust.draw.xml
oysterpack-trust/src/: concurrent.rs  execution.rs  lib.rs  metrics.rs  opnng.rs
oysterpack-trust/tests/: cucumber_execution.rs  cucumber_execution_executor.rs  cucumber_execution_metrics.rs  cucumber_execution_registry.rs  cucumber_metrics.rs  cucumber_metrics_collectors.rs  cucumber_metrics_descriptors.rs  cucumber_metrics_gathering.rs  cucumber_metrics_registry.rs  cucumber_metrics_support.rs  cucumber_reqrep_client.rs  cucumber_reqrep_config.rs  cucumber_reqrep_metrics.rs  cucumber_reqrep_service.rs
oysterpack-uid/: CHANGELOG.md  Cargo.toml  README.md
oysterpack-uid-macros/: CHANGELOG.md  Cargo.toml  README.md
oysterpack-uid-macros/src/: lib.rs
oysterpack-uid/benches/: ulid_bench.rs
oysterpack-uid/src/: lib.rs  macros.rs  main.rs  tests.rs  ulid.rs
oysterpack-uid/tests/: uid.rs  ulid_macro.rs
oysterpack/examples/: uid.rs  ulid.rs
oysterpack/src/: lib.rs
oysterpack/tests/: app_metadata.rs  uid.rs  ulid.rs  version-numbers.rs
snaps/oysterpack-snap-ulid/: CHANGELOG.md  Cargo.toml  README.md
(+213 files in other folders)
