[package]
name = "oysterpack_actors"
version = "0.1.0" # remember to update html_root_url
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Actors"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
readme = "README.md"

[dependencies]
actix = "0.5.6"
tokio = "0.1.5"
futures = "0.1.21"

serde = "1"
serde_derive = "1"
erased-serde = "0.3.3"

slog = "2"
slog-extlog = "3"
slog-extlog-derive = "3"
slog-async = "2"
slog-json = "2"

chrono = { version = "0.4", features = ["serde"] }
semver = { version = "0.9.0", features = ["serde"] }
num_cpus = "1"
lazy_static = "1"

oysterpack_id = {path = "../oysterpack-id", version = "0.1.0"}
oysterpack_platform = {path = "../oysterpack-platform", version = "0.1.0"}

[dev-dependencies]
version-sync = "0.5"

# serde serializers
serde_cbor = "0.8"
serde_json = "1"
bincode = "1"
rmp-serde = "0.13.7"

sloggers = "0.2.6"

# TODO
cucumber = "0.3.1"

[badges]
maintenance = { status = "actively-developed" }
