[package]
name = "oysterpack_app_metadata_macros"
version = "0.1.1"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Application Metadata Macros"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-app-metadata-macros"
documentation = "https://docs.rs/oysterpack_app_metadata"
readme = "README.md"
keywords = ["metadata"]
edition = "2018"

[dependencies]
oysterpack_app_metadata = {path = "../oysterpack-app-metadata", version = "0.3"}
semver = {version = "0.9", features = ["serde"]}
chrono = { version = "0.4", features = ["serde", "time"] }

[dev-dependencies]
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}
version-sync = "0.6"
serde_json = "1"

[badges]
maintenance = {status = "actively-developed"}