[package]
name = "oysterpack_app_metadata"
version = "0.3.1"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Application Metadata"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-app-metadata"
documentation = "https://docs.rs/oysterpack_app_metadata"
readme = "README.md"
build = "build.rs"
keywords = ["metadata"]

[dependencies]
semver = {version = "0.9", features = ["serde"]}
chrono = { version = "0.4", features = ["serde", "time"] }
serde = "1"
serde_derive = "1"

[dev-dependencies]
version-sync = "0.5"
log = "0.4"
fern = "0.5"
lazy_static = "1"

[build-dependencies]
mml = "0.1.41"

[badges]
maintenance = {status = "actively-developed"}