[package]
name = "oysterpack_app_metadata"
version = "0.3.1"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Application Metadata"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-app-metadata"
documentation = "https://docs.rs/oysterpack_app_metadata"
readme = "README.md"
build = "build.rs"
keywords = ["metadata"]

[dependencies]
semver = {version = "0.9", features = ["serde"]}
chrono = { version = "0.4", features = ["serde", "time"] }
serde = "1"
serde_derive = "1"

[dev-dependencies]
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}
version-sync = "0.5"

[build-dependencies]
mml = "0.1.41"

[badges]
maintenance = {status = "actively-developed"}