[package]
name = "oysterpack_app_template"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Application Template"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
documentation = "https://docs.rs/oysterpack_app_template"
readme = "README.md"
build = "build.rs"
publish = false

[dependencies]
oysterpack = {path = "../oysterpack", version="0.2"}
log = "0.4.5"
fern = "0.5"

[dev-dependencies]
version-sync = "0.5"
lazy_static = "1"
serde_json = "1"

[build-dependencies]
oysterpack_built = {path = "../oysterpack-built", version="0.3"}

[badges]