[package]
name = "oysterpack_app_template"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Application Template"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
documentation = "https://docs.rs/oysterpack_app_template"
readme = "README.md"
build = "build.rs"
publish = false
edition = "2018"

[dependencies]
oysterpack = {path = "../oysterpack", version="0.2"}
serde_json = "1"

[dev-dependencies]
oysterpack_testing = {path = "../oysterpack-testing", version="0.1"}
version-sync = "0.7"

[build-dependencies]
oysterpack_built = {path = "../oysterpack-built", version="0.3"}

[badges]