[package]
name = "oysterpack_built_mod"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "Provides macro to generate a build module which contains build-time information."
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-built-mod"
documentation = "https://docs.rs/oysterpack_built_mod"
readme = "README.md"

[dependencies]

[dev-dependencies]
version-sync = "0.5"

[build-dependencies]

[badges]