[package]
name = "oysterpack_built_mod"
version = "0.2.2"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "Provides macro to generate a build module which contains build-time information."
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-built-mod"
documentation = "https://docs.rs/oysterpack_built_mod"
readme = "README.md"

[dependencies]
semver = {version = "0.9", features = ["serde"]}
chrono = { version = "0.4", features = ["serde", "time"] }
serde = "1"
serde_derive = "1"

[dev-dependencies]
log = "0.4"
fern = "0.5"
lazy_static = "1"
serde_json = "1.0"

[build-dependencies]
oysterpack_built = "0.2"

[badges]