[package]
name = "oysterpack_built"
version = "0.3.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Built"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-built"
documentation = "https://docs.rs/oysterpack_built"
readme = "README.md"
build = "build.rs"

[dependencies]
log = "0.4"
semver = {version = "0.9", features = ["serde"]}
chrono = { version = "0.4", features = ["serde", "time"] }
serde = "1"
serde_derive = "1"
serde_json = "1.0"

oysterpack_app_metadata = {path = "../oysterpack-app-metadata", version="0.1"}

built = {version = "0.3", optional = true}
cargo = {version = "0.30", optional = true}
failure = {version = "0.1", optional = true}
petgraph = {version =  "0.4", features = ["serde-1"], optional = true}

[dev-dependencies]
version-sync = "0.5"
fern = "0.5"
lazy_static = "1"

[build-dependencies]
built = "0.3"

[badges]

[features]
default = []

build-time = ["built", "cargo", "failure", "petgraph"]
