[package]
name = "oysterpack_built"
version = "0.3.1"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Built"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-built"
documentation = "https://docs.rs/oysterpack_built"
readme = "README.md"
keywords = ["build", "metadata"]
categories = ["development-tools::build-utils"]

[dependencies]
log = "0.4"
semver = "0.9"
chrono = "0.4"
serde = "1"
serde_derive = "1"

built = "0.3"
cargo = "0.30"
failure = "0.1"
petgraph = {version =  "0.4", features = ["serde-1"]}

[dev-dependencies]
version-sync = "0.5"
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}
serde_json = "1.0"

[badges]
maintenance = {status = "actively-developed"}
