[package]
name = "oysterpack_core"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Core"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-core"
documentation = "https://docs.rs/oysterpack_core"
readme = "README.md"

[dependencies]
log = "0.4"

[dev-dependencies]
version-sync = "0.5"
fern = "0.5"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"

[badges]
maintenance = {status = "actively-developed"}