[package]
name = "oysterpack_core"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Core"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-core"
documentation = "https://docs.rs/oysterpack_core"
readme = "README.md"
keywords = []
categories = []
edition = "2018"

[dependencies]
oysterpack_app_metadata = {path = "../oysterpack-app-metadata", version = "0.3"}
oysterpack_app_metadata_macros = {path = "../oysterpack-app-metadata-macros", version = "0.1"}
oysterpack_uid = {path = "../oysterpack-uid", version = "0.2"}
oysterpack_log = {path = "../oysterpack-log", version = "0.1"}
oysterpack_events = {path = "../oysterpack-events", version = "0.1"}
oysterpack_errors = {path = "../oysterpack-errors", version = "0.1"}

failure = "0.1.3"
chrono = "0.4.6"
serde = {version = "1", features = ["derive"] }
lazy_static = "1"

# serde serializers
serde_cbor = "0.9"
serde_json = "1"
bincode = {version = "1", features = ["i128"]}
async-bincode = "0.4.9"

actix = "0.7.6"
tokio = "0.1.11"
tokio-threadpool = "0.1.8"
futures = "0.1.25"
crossbeam-channel = "0.3.0"
bytes = "0.4.11"

sodiumoxide = "0.2.0"
bs58 = "0.2.2"

flate2 = "1.0.6"
lz4 = "1.23.1"
parity-snappy = "0.1.0"

nng = "0.3.0"

[dev-dependencies]
version-sync = "0.7"
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}
criterion = "0.2.8"
serde_json = "1"

[build-dependencies]
oysterpack_built = {path = "../oysterpack-built", version="0.3"}

[badges]
maintenance = {status = "actively-developed"}

[[bench]]
name = "message_encoding"
harness = false