[package]
name = "oysterpack_errors"
version = "0.1.2"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Errors"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-errors"
documentation = "https://docs.rs/oysterpack_errors"
readme = "README.md"
edition = "2018"

[dependencies]
oysterpack_uid = {path = "../oysterpack-uid", version = "0.2"}
oysterpack_log = {path = "../oysterpack-log", version = "0.1"}
oysterpack_events = {path = "../oysterpack-events", version = "0.1"}

failure = "0.1.3"
chrono = "0.4.6"
serde = {version = "1", features = ["derive"] }

[dev-dependencies]
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}
version-sync = "0.7"

[badges]
maintenance = {status = "actively-developed"}