[package]
name = "oysterpack_events"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Core"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-events"
documentation = "https://docs.rs/oysterpack_core"
readme = "README.md"
edition = "2018"

[dependencies]
oysterpack_app_metadata = {path = "../oysterpack-app-metadata", version = "0.3"}
oysterpack_uid = {path = "../oysterpack-uid", version = "0.2"}
oysterpack_log = {path = "../oysterpack-log", version = "0.1"}

serde = {version = "1", features = ["derive", "rc"] }
serde_json = "1"

chrono = {version = "0.4", features=["serde"]}

[dev-dependencies]
version-sync = "0.6"
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}
failure = "0.1.3"

[badges]
maintenance = {status = "actively-developed"}