[package]
name = "oysterpack_id"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Rust Reactive Platform"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
documentation = "https://docs.rs/oysterpack_id"
readme = "README.md"

[dependencies]
uuid = { version = "0.6", features = ["v4","serde"] }
serde = "1.0.37"
serde_derive = "1.0.37"

[dev-dependencies]
version-sync = "0.5"

# serde serializers
serde_cbor = "0.8.2"
serde_json = "1.0.13"
bincode = "1.0.0"
rmp-serde = "0.13.7"
