[package]
name = "oysterpack_lib_template"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack XXX"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
documentation = "https://docs.rs/oysterpack_XXX"
readme = "README.md"
build = "build.rs"

[dependencies]
oysterpack_built_mod = {path = "../oysterpack-built-mod"}
log = "0.4"
chrono = { version = "0.4", features = ["serde", "time"] }
lazy_static = "1"

[dev-dependencies]
version-sync = "0.5"
fern = "0.5"

[build-dependencies]
oysterpack_built = {path = "../oysterpack-built"}

[badges]