[package]
name = "oysterpack_lib_template"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack XXX"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-XXX"
documentation = "https://docs.rs/oysterpack_XXX"
readme = "README.md"
keywords = []
categories = []

[dependencies]
log = "0.4"

[dev-dependencies]
version-sync = "0.5"
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}

[build-dependencies]
oysterpack_built = {path = "../oysterpack-built", version="0.3"}

[badges]
maintenance = {status = "actively-developed"}