[package]
name = "oysterpack_log"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "Standardizes logging for the OysterPack platform"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-log"
documentation = "https://docs.rs/oysterpack_log"
readme = "README.md"
keywords = ["log"]
build = "build.rs"

[dependencies]
oysterpack_macros = {version = "0.1.0", path = "../oysterpack-macros"}
oysterpack_app_metadata = {version = "0.3", path = "../oysterpack-app-metadata"}

log = {version = "0.4", features = ["serde"]}
fern = {version = "0.5"}
chrono = { version = "0.4", features = ["serde"]}

serde = "1"
serde_derive = "1"
serde_json = "1"
actix = "0.7.7"

[dev-dependencies]
version-sync = "0.5"
oysterpack_app_metadata_macros = {path = "../oysterpack-app-metadata-macros", version="0.1"}

[build-dependencies]
oysterpack_built = {path = "../oysterpack-built", version="0.3"}

[badges]
maintenance = {status = "actively-developed"}
