[package]
name = "oysterpack_log"
version = "0.1.1"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "Standardizes logging for the OysterPack platform"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-log"
documentation = "https://docs.rs/oysterpack_log"
readme = "README.md"
keywords = ["log"]
edition = "2018"

[dependencies]
log = {version = "0.4", features = ["serde"]}
fern = {version = "0.5"}
chrono = { version = "0.4", features = ["serde"]}

serde = { version = "1", features=["derive"]}
serde_json = "1"

[dev-dependencies]
version-sync = "0.7"

[badges]
maintenance = {status = "actively-developed"}
