[package]
name = "oysterpack_log"
version = "0.1.1"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "Standardizes logging for the OysterPack platform"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-log"
documentation = "https://docs.rs/oysterpack_log"
readme = "README.md"
keywords = ["log"]
edition = "2018"

[dependencies]
log = {version = "0.4", features = ["serde", "std"]}
fern = {version = "0.5"}
chrono = { version = "0.4", features = ["serde"]}

serde = { version = "1", features=["derive"]}
serde_json = "1"

[features]
max_level_off   = ["log/max_level_off"]
max_level_error = ["log/max_level_error"]
max_level_warn  = ["log/max_level_warn"]
max_level_info  = ["log/max_level_info"]
max_level_debug = ["log/max_level_debug"]
max_level_trace = ["log/max_level_trace"]

release_max_level_off   = ["log/release_max_level_off"]
release_max_level_error = ["log/release_max_level_error"]
release_max_level_warn  = ["log/release_max_level_warn"]
release_max_level_info  = ["log/release_max_level_info"]
release_max_level_debug = ["log/release_max_level_debug"]
release_max_level_trace = ["log/release_max_level_trace"]

std = ["log/std"]

[dev-dependencies]
version-sync = "0.9"

[badges]
maintenance = {status = "actively-developed"}
