[package]
name = "oysterpack_logging"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack2016@gmail.com>"]
description = "OysterPack Logging"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
readme = "README.md"

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
fern = { version = "0.5", features = ["syslog-3"] }
syslog = "3"

serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
version-sync = "0.5"

