[package]
name = "oysterpack_message"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Actors"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.2", features = ["serde"] }
serde = "1.0.37"
serde_derive = "1.0.37"
exonum_sodiumoxide = "0.0.20"

oysterpack_id = {path = "../oysterpack-id", version = "0.1.0"}

[dev-dependencies]
version-sync = "0.5"

# serde serializers
serde_cbor = "0.8.2"
serde_json = "1.0.13"
bincode = "1.0.0"
rmp-serde = "0.13.7"

[badges]
maintenance = { status = "actively-developed" }
