[package]
name = "oysterpack_platform"
version = "0.1.0" # remember to update html_root_url
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack Rust Reactive Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack"
readme = "README.md"

[dependencies]
uuid = { version = "0.6", features = ["v4","serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.0.0"
regex = "0.2.10"
semver = { version = "0.9.0", features = ["serde"] }

serde = "1.0.37"
serde_derive = "1.0.37"

failure = {version = "0.1.1", features= ["std","derive"]}

oysterpack_id = {path = "../oysterpack-id", version = "0.1.0"}

[dev-dependencies]
version-sync = "0.5"

serde_cbor = "0.8.2"
serde_json = "1.0.13"
bincode = "1.0.0"
rmp-serde = "0.13.7"

[badges]
maintenance = { status = "actively-developed" }
