[package]
name = "oysterpack_rpc"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
description = "OysterPack RPC"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/oysterpack"
homepage = "https://github.com/oysterpack/oysterpack/tree/master/oysterpack-rpc"
documentation = "https://docs.rs/oysterpack_rpc"
readme = "README.md"
keywords = []
categories = []
edition = "2018"

[dependencies]
oysterpack_app_metadata = {path = "../oysterpack-app-metadata", version = "0.3"}
oysterpack_app_metadata_macros = {path = "../oysterpack-app-metadata-macros", version = "0.1"}
oysterpack_uid = {path = "../oysterpack-uid", version = "0.2"}
oysterpack_macros = {path = "../oysterpack-macros", version = "0.1"}
oysterpack_log = {path = "../oysterpack-log", version = "0.1"}
oysterpack_events = {path = "../oysterpack-events", version = "0.1"}
oysterpack_errors = {path = "../oysterpack-errors", version = "0.1"}

failure = "0.1.3"
chrono = "0.4.6"

serde = {version = "1", features = ["derive"] }
serde_cbor = "0.9"
serde_json = "1"
bincode = "1"
rmp-serde = "0.13"

exonum_sodiumoxide = "0.0.20"
bs58 = "0.2.2"

flate2 = "1.0.6"
lz4 = "1.23.1"
parity-snappy = "0.1.0"

[dev-dependencies]
version-sync = "0.6"
oysterpack_testing = {path = "../oysterpack-testing", version = "0.1"}
criterion = "0.2.5"

# only works on rust nightly - wait until it works on rust stable
# tarpc = "0.14.1"

[build-dependencies]
oysterpack_built = {path = "../oysterpack-built", version="0.3"}

[badges]
maintenance = {status = "actively-developed"}