[package]
name = "oysterpack_service"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack2016@gmail.com>"]

[dependencies]
tokio = "0.1.5"
tokio-service = "0.1.0"
futures = "0.1"

failure = "0.1.1"
failure_derive = "0.1.1"

semver = { version = "0.9.0", features = ["serde"] }

serde = "1.0.37"
serde_derive = "1.0.37"

oysterpack_id = {path = "../oysterpack-id", version = "0.1.0"}
oysterpack_platform = {path = "../oysterpack-platform", version = "0.1.0"}

[dev-dependencies]
version-sync = "0.5"
